--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="navbar-brand">
               <a href="index.html"><h1>David Chu's China Bistro</h1></a>
               <p>
-                <img src="../Module-5/Assets/star-k-logo.png" alt="Kosher certification" />
+                <img src="Assets/star-k-logo.png" alt="Kosher certification" />
                 <span>Kosher Certified</span>
               </p>
             </div>
